--- a/SimpleWeather.UWP/Controls/ForecastItem.xaml
+++ b/SimpleWeather.UWP/Controls/ForecastItem.xaml
@@ -6,8 +6,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    Name="Control"
     d:DesignHeight="200"
-    d:DesignWidth="155">
+    d:DesignWidth="155"
+    Width="155">
     <UserControl.Resources>
         <Style x:Key="ForecastIcon" TargetType="Viewbox">
             <Setter Property="Height" Value="75" />
@@ -41,21 +43,69 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Style="{StaticResource ForecastDate}" Text="{Binding Date, FallbackValue=Thursday 29}" Grid.Row="0"/>
-        <Viewbox Style="{StaticResource ForecastIcon}" Height="Auto" Grid.Row="1">
+        <TextBlock Name="ForecastDate" Style="{StaticResource ForecastDate}" Text="{Binding Date, FallbackValue=Thursday 29}" Grid.Row="0"/>
+        <Viewbox Name="WeatherBox" Style="{StaticResource ForecastIcon}" Grid.Row="1" Height="75">
             <TextBlock Style="{StaticResource WeatherIcon}" Text="{Binding WeatherIcon, FallbackValue='&#xf00d;'}" />
         </Viewbox>
-        <TextBlock Style="{StaticResource ForecastCondition}" Text="{Binding Condition, FallbackValue='Scattered Thunderstorms'}" Grid.Row="2"/>
+        <TextBlock Name="ForecastCondition" Style="{StaticResource ForecastCondition}" Grid.Row="2" 
+                   Text="{Binding Condition, FallbackValue='Scattered Thunderstorms'}"
+                   Width="145" HorizontalAlignment="Left" TextWrapping="WrapWholeWords"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Row="3">
-            <TextBlock Text="{Binding HiTemp, FallbackValue=70º}" Padding="10,5,5,5"
-                           Style="{StaticResource ForecastTemp}"/>
-            <TextBlock FontSize="16" Text="{Binding LoTemp, FallbackValue=65º}"
-                           Foreground="LightGray"
-                           Style="{StaticResource ForecastTemp}" />
+            <TextBlock Name="ForecastHiTemp" Text="{Binding HiTemp, FallbackValue=70º}" Padding="10,5,5,5"
+                       Style="{StaticResource ForecastTemp}"/>
+            <TextBlock Name="ForecastLoTemp" FontSize="16" Text="{Binding LoTemp, FallbackValue=65º}"
+                       Foreground="LightGray"
+                       Style="{StaticResource ForecastTemp}" />
         </StackPanel>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="HeightStates">
+                <VisualState x:Name="MobileHeight">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowHeight="0"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Control.Width" Value="150"/>
+                        <Setter Target="WeatherBox.Height" Value="50"/>
+                        <Setter Target="ForecastDate.FontSize" Value="12"/>
+                        <Setter Target="ForecastCondition.FontSize" Value="12"/>
+                        <Setter Target="ForecastCondition.Height" Value="35"/>
+                        <Setter Target="ForecastHiTemp.FontSize" Value="16"/>
+                        <Setter Target="ForecastLoTemp.FontSize" Value="12"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="MediumHeight">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowHeight="640"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Control.Width" Value="155"/>
+                        <Setter Target="WeatherBox.Height" Value="75"/>
+                        <Setter Target="ForecastDate.FontSize" Value="16"/>
+                        <Setter Target="ForecastCondition.FontSize" Value="14"/>
+                        <Setter Target="ForecastCondition.Height" Value="47"/>
+                        <Setter Target="ForecastHiTemp.FontSize" Value="20"/>
+                        <Setter Target="ForecastLoTemp.FontSize" Value="16"/>
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="LargeHeight">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowHeight="690"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="Control.Width" Value="155"/>
+                        <Setter Target="WeatherBox.Height" Value="75"/>
+                        <Setter Target="ForecastDate.FontSize" Value="16"/>
+                        <Setter Target="ForecastCondition.FontSize" Value="14"/>
+                        <Setter Target="ForecastCondition.Height" Value="47"/>
+                        <Setter Target="ForecastHiTemp.FontSize" Value="20"/>
+                        <Setter Target="ForecastLoTemp.FontSize" Value="16"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </Grid>
 </UserControl>
