SimpleWeather: changes & bug fixes
* Use location data instead of pair
* Move location data to separate file
* Only keep weather data in data file
* Allow transition from weather data to two separate data files
* Remove home buttom on location panels
* Separate GPS location from favorites
* Update weather & location on resume if needed
* Revert saving home location in Settings
* UWP: Handle resume event

--- a/SimpleWeather.UWP/Controls/LocationPanel.xaml
+++ b/SimpleWeather.UWP/Controls/LocationPanel.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     d:DesignHeight="100"
     d:DesignWidth="400"
-    Tag="{Binding Pair}">
+    Tag="{Binding LocationData}">
 
     <Grid Background="{Binding Background, FallbackValue='#FF006FBF'}"
           Height="100" BorderBrush="White"
