--- a/SimpleWeather.Android/Resources/layout/app_widget_1x1.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_1x1.xml
@@ -33,9 +33,8 @@
         android:visibility="visible" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
