--- a/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
@@ -1,92 +1,94 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widgetBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    android:columnCount="2"
+    android:orientation="vertical"
     android:padding="@dimen/widget_margin"
-    android:rowCount="2"
     tools:layout_height="72dp"
     tools:layout_width="288dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_column="0"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:gravity="center_vertical"
-        android:minHeight="30dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/location_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="clip_vertical|start"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:padding="4dp"
-            android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
-            android:textColor="@android:color/white"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            tools:text="New York, NY" />
+        android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/condition_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/weather_icon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_margin="4dp"
-                android:gravity="center"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_weather_icon"
-                android:tint="@android:color/white" />
-
-            <ImageView
-                android:id="@+id/condition_temp"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/location_name"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="2dp"
-                android:gravity="center"
-                android:scaleType="fitXY" />
+                android:layout_gravity="clip_vertical|start"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:padding="4dp"
+                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                tools:text="New York, NY" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/weather_icon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="4dp"
+                    android:gravity="center"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_weather_icon"
+                    android:tint="@android:color/white" />
+
+                <ImageView
+                    android:id="@+id/condition_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|start"
+                    android:layout_margin="2dp"
+                    android:adjustViewBounds="true"
+                    android:maxWidth="30dp"
+                    android:scaleType="fitCenter"
+                    tools:src="@drawable/ic_home_fill_white_24dp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/forecast_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/condition_layout"
+            android:minHeight="30dp"
+            android:minWidth="75dp"
+            android:orientation="horizontal">
+
+        </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/forecast_layout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_column="1"
-        android:layout_columnWeight="1"
-        android:layout_row="0"
-        android:layout_rowWeight="1"
-        android:gravity="center_vertical"
-        android:minHeight="30dp"
-        android:minWidth="75dp"
-        android:orientation="horizontal">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
         android:gravity="end"
         android:orientation="horizontal">
 
@@ -138,4 +140,4 @@
             android:visibility="visible" />
 
     </LinearLayout>
-</GridLayout>
+</LinearLayout>
