--- a/SimpleWeather.Android/Resources/layout/app_widget_4x2.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x2.xml
@@ -1,13 +1,12 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widgetBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
-    android:columnCount="3"
+    android:orientation="vertical"
     android:padding="@dimen/widget_margin"
-    android:rowCount="4"
     tools:layout_height="144dp"
     tools:layout_width="288dp">
 
@@ -15,10 +14,7 @@
         android:id="@+id/location_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
         android:layout_gravity="start"
-        android:layout_row="0"
         android:ellipsize="end"
         android:maxLines="1"
         android:padding="4dp"
@@ -28,22 +24,17 @@
         android:textStyle="bold"
         tools:text="New York, NY" />
 
-    <GridLayout
-        android:layout_width="0dp"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_column="0"
-        android:layout_columnSpan="2"
-        android:layout_columnWeight="1"
-        android:layout_row="1"
-        android:layout_rowWeight="1"
-        android:columnCount="3">
+        android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/details_panel"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_column="0"
-            android:layout_rowWeight="1"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:orientation="vertical"
             android:paddingStart="4dp">
 
@@ -121,6 +112,7 @@
                     android:layout_width="12dp"
                     android:layout_height="16dp"
                     android:layout_gravity="top|center_horizontal"
+                    android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
                     android:src="@drawable/ic_raindrop" />
 
@@ -146,12 +138,11 @@
 
         <LinearLayout
             android:id="@+id/forecast_panel"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_column="1"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/details_panel"
+            android:layout_toStartOf="@+id/clockdate_panel"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -221,10 +212,9 @@
         <LinearLayout
             android:id="@+id/clockdate_panel"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_column="2"
-            android:layout_rowWeight="1"
-            android:gravity="center_vertical"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:orientation="vertical"
             android:padding="2dp">
 
@@ -259,17 +249,13 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-    </GridLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/forecast_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_row="2"
-        android:minHeight="30dp"
-        android:minWidth="75dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
     </LinearLayout>
@@ -277,9 +263,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_row="3"
         android:gravity="bottom|end"
         android:orientation="horizontal">
 
@@ -317,4 +300,4 @@
             android:visibility="visible" />
 
     </LinearLayout>
-</GridLayout>
+</LinearLayout>
