--- a/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel.xml
@@ -22,38 +22,45 @@
         android:textSize="12sp"
         tools:text="Mon" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center"
         android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/forecast_icon"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_alignEnd="@+id/spacer_middle"
+            android:layout_centerVertical="true"
             android:layout_margin="4dp"
-            android:layout_weight="1"
+            android:adjustViewBounds="true"
             android:scaleType="fitEnd"
             android:src="@drawable/ic_weather_icon"
             android:tint="@android:color/white" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/spacer_middle"
             android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerInParent="true" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_alignParentEnd="true"
+            android:layout_alignStart="@+id/spacer_middle"
+            android:layout_centerVertical="true"
             android:orientation="vertical"
             android:padding="0dp">
 
             <TextView
                 android:id="@+id/forecast_hi"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="start"
                 android:layout_weight="1"
+                android:gravity="start"
                 android:maxLines="1"
                 android:padding="2dp"
                 android:text="--"
@@ -65,10 +72,11 @@
 
             <TextView
                 android:id="@+id/forecast_lo"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="start"
                 android:layout_weight="1"
+                android:gravity="start"
                 android:maxLines="1"
                 android:padding="2dp"
                 android:text="--"
@@ -78,6 +86,6 @@
                 tools:text="52º" />
 
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
