--- a/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel_small.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel_small.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="0dp"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="@null"
     android:orientation="vertical"
-    android:layout_weight="1"
-    tools:layout_width="72dp"
-    tools:layout_height="72dp">
+    tools:layout_height="72dp"
+    tools:layout_width="72dp">
 
     <TextView
         android:id="@+id/forecast_date"
@@ -36,9 +36,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="0dp"
         android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="0dp">
 
         <TextView
             android:id="@+id/forecast_hi"
