--- a/SimpleWeather.Android/Resources/layout/notification_layout.xml
+++ b/SimpleWeather.Android/Resources/layout/notification_layout.xml
@@ -3,9 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widgetBackground"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="72dp"
     android:background="@null"
-    android:padding="8dp">
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
 
     <ImageView
         android:id="@+id/weather_icon"
@@ -25,6 +28,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/weather_icon"
         android:layout_toStartOf="@+id/update_layout"
         android:orientation="vertical">
