--- a/SimpleWeather.UWP/SettingsPage.xaml
+++ b/SimpleWeather.UWP/SettingsPage.xaml
@@ -242,12 +242,12 @@
                                        Style="{StaticResource TitleTextBlockStyle}"/>
                             <TextBlock x:Uid="Pref_SummaryUnits" Text="Display units in:" Padding="0,5" />
                             <StackPanel Orientation="Horizontal" Padding="10,5">
-                                <RadioButton x:Name="Fahrenheit" Content="Fahrenheit" Checked="Fahrenheit_Checked"/>
-                                <RadioButton x:Name="Celsius" Content="Celsius" Checked="Celsius_Checked"/>
+                                <RadioButton x:Name="Fahrenheit" Content="Fahrenheit" />
+                                <RadioButton x:Name="Celsius" Content="Celsius" />
                             </StackPanel>
                             <TextBlock x:Uid="Pref_SummaryFollowGPS" Text="Follow current location via GPS" Padding="0,5" />
                             <StackPanel Orientation="Horizontal" Padding="10,5">
-                                <ToggleSwitch x:Name="FollowGPS" Toggled="FollowGPS_Toggled"/>
+                                <ToggleSwitch x:Name="FollowGPS" />
                             </StackPanel>
                             <ComboBox x:Name="RefreshComboBox" MinWidth="260" Margin="0,10">
                                 <ComboBox.Items>
