--- a/SimpleWeather.Android/Resources/layout/app_widget_1x1.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_1x1.xml
@@ -44,7 +44,9 @@
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:layout_weight="1"
+            android:adjustViewBounds="true"
             android:gravity="center"
+            android:maxWidth="75dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_weather_icon"
             android:tint="@android:color/white" />
@@ -56,7 +58,9 @@
             android:layout_gravity="center"
             android:layout_margin="0dp"
             android:layout_weight="0.6"
+            android:adjustViewBounds="true"
             android:gravity="center"
+            android:maxWidth="75dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_home_fill_white_24dp" />
 
