--- a/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x1.xml
@@ -50,8 +50,9 @@
                     android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_margin="4dp"
+                    android:adjustViewBounds="true"
                     android:gravity="center"
-                    android:scaleType="fitXY"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_weather_icon"
                     android:tint="@android:color/white" />
 
