--- a/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel_medium.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_forecast_panel_medium.xml
@@ -27,8 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_margin="2dp"
         android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:maxWidth="50dp"
+        android:padding="4dp"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_weather_icon"
         android:tint="@android:color/white" />
