--- a/SimpleWeather.Android/Resources/layout/nav_header_main.xml
+++ b/SimpleWeather.Android/Resources/layout/nav_header_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_header_main"
     android:layout_width="match_parent"
@@ -23,12 +24,14 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         tools:text="New York, NY" />
 
-    <SimpleWeather.Droid.Controls.WeatherIcon
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/nav_weathertemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        app:fontFamily="@font/weathericons"
+        tools:fontFamily="@font/weathericons"
         tools:text="81\uf045" />
 
 </LinearLayout>
