--- a/SimpleWeather.Android/Resources/layout/txt_forecast_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/txt_forecast_panel.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:padding="4dp">
 
-        <SimpleWeather.Droid.Controls.WeatherIcon
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/txt_forecasticon"
             android:layout_width="65dp"
             android:layout_height="65dp"
@@ -21,6 +21,8 @@
             android:padding="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
             android:textSize="36sp"
+            app:fontFamily="@font/weathericons"
+            tools:fontFamily="@font/weathericons"
             tools:text="@string/wi_wu_chancetstorms" />
 
         <LinearLayout
@@ -29,7 +31,7 @@
             android:layout_gravity="center"
             android:orientation="horizontal">
 
-            <SimpleWeather.Droid.Controls.WeatherIcon
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -38,7 +40,9 @@
                 android:text="@string/wi_raindrop"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                 android:textColor="@android:color/white"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                app:fontFamily="@font/weathericons"
+                tools:fontFamily="@font/weathericons" />
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/txtforecast_pop"
